--- a/cities.html
+++ b/cities.html
@@ -23,6 +23,9 @@
   <li>Detroit</li>
   <li>Eldorado</li>
   <li>Filmore</li>
+  <li>Jackson</li>
+  <li>Kingston</li>
+  <li>Lima</li>
 <!-- ALPHABET END -->
 </ul>
 </div>
