--- a/pilots.html
+++ b/pilots.html
@@ -23,6 +23,9 @@
   <li>Delta</li>
   <li>Echo</li>
   <li>Foxtrot</li>
+  <li>Juliet</li>
+  <li>Kilo</li>
+  <li>Lincoln</li>
 <!-- ALPHABET END -->
 </ul>
 </div>
